# typed-bipartite-graphs

./: LICENSE  README.md  typed-bipartite-graphs.cabal
src/: ArrayBipartite.hs  Bipartite.hs  MapBipartite.hs
test/: ArrayBipartiteTests.hs  BipartiteTests.hs  MapBipartiteTests.hs  TestSuite.hs
