name:                typed-bipartite-graphs
version:             0.1.0.0
synopsis:            Experiments with typed bipartite graphs
description:         Please see README.md
homepage:            https://github.com/StevenWInfo/typed-bipartite-graphs#readme
license:             MIT
license-file:        LICENSE
author:              Steven W
maintainer:          StevenW.info@gmail.com
copyright:           Copyright: (c) 2017 Steven W
category:            Graphs, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bipartite
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010

test-suite typed-bipartite-graphs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             BipartiteTests.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/StevenWInfo/typed-bipartite-graphs
